2016-11-05  Markus Gans  <guru.mail@muenster.de>
	* Determine xterm maximum number of colors via OSC 4
	* The method clearArea can now fill the background 
	  with certain character

2016-11-03  Markus Gans  <guru.mail@muenster.de>
	* xterm should be able to use at least 16 colors

2016-11-01  Markus Gans  <guru.mail@muenster.de>
	* The class declaration now has a consistent order

2016-10-17  Markus Gans  <guru.mail@muenster.de>
	* Refactor the VGA attribute controller access code

2016-10-15  Markus Gans  <guru.mail@muenster.de>
	* Each virtual window gets its own virtual print cursor

2016-10-14  Markus Gans  <guru.mail@muenster.de>
	* Virtual windows can now store their own offset information
	* Correct implementation of the move() method

2016-10-13  Markus Gans  <guru.mail@muenster.de>
	* Reduces in the code the number of friend classes

2016-10-11  Markus Gans  <guru.mail@muenster.de>
	* Separate the virtual terminal into a own class vterm

2016-10-09  Markus Gans  <guru.mail@muenster.de>
	* Remove some duplicate code

2016-10-08  Markus Gans  <guru.mail@muenster.de>
	* Add the possibility to scroll text up and down 
	  in a virtual window

2016-10-06  Markus Gans  <guru.mail@muenster.de>
	* The input cursor is now controlled by the virtual terminal

2016-10-02  Markus Gans  <guru.mail@muenster.de>
	* FStatusBar and FMenuBar use now the always-on-top 
	  window option

2016-10-01  Markus Gans  <guru.mail@muenster.de>
	* Add an always-on-top mode for window objects
	* New FToolTip widget to show assisted information

2016-09-30  Markus Gans  <guru.mail@muenster.de>
	* Using arrow keys to move or to resize a window

2016-09-28  Markus Gans  <guru.mail@muenster.de>
	* The size is now dynamically changeable with the mouse 
	  in a resizable window.

2016-09-26  Markus Gans  <guru.mail@muenster.de>
	* FLabel now transmits the Click events to the parent widget

2016-09-25  Markus Gans  <guru.mail@muenster.de>
	* Splitting gotoxy in printPos (local position) 